# doca-cpp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
agent/: codestyle.md
cmake/: FindDOCA.cmake  doca-cpp-config.cmake.in
doca-cpp/include/doca-cpp/core/: buffer.hpp  buffer_view.hpp  context.hpp  device.hpp  error.hpp  interfaces.hpp  mmap.hpp  progress_engine.hpp  resource_manager.hpp  resource_scope.hpp  task.hpp  types.hpp
doca-cpp/include/doca-cpp/flow/: flow.hpp  flow_config.hpp  flow_pipe.hpp  flow_port.hpp
doca-cpp/include/doca-cpp/gpunetio/: gpu_buffer_array.hpp  gpu_buffer_pool.hpp  gpu_buffer_view.hpp  gpu_device.hpp  gpu_manager.hpp  gpu_memory_region.hpp  gpu_pipeline_control.hpp  gpu_rdma_client.hpp  gpu_rdma_handler.hpp  gpu_rdma_kernel.cuh  gpu_rdma_pipeline.hpp  gpu_rdma_server.hpp  gpu_stream_service.hpp
doca-cpp/include/doca-cpp/gpunetio/kernels/: client_kernel.cuh  kernel_common.cuh  server_kernel.cuh
doca-cpp/include/doca-cpp/logging/: logging.hpp
doca-cpp/include/doca-cpp/rdma/: rdma_api.hpp  rdma_awaitable.hpp  rdma_buffer.hpp  rdma_buffer_view.hpp  rdma_client.hpp  rdma_connection.hpp  rdma_connection_manager.hpp  rdma_endpoint.hpp  rdma_engine.hpp  rdma_engine_old.hpp  rdma_executor.hpp  rdma_peer.hpp  rdma_pipeline_control.hpp  rdma_request.hpp  rdma_server.hpp  rdma_service_interface.hpp  rdma_stream_chain.hpp  rdma_stream_client.hpp  rdma_stream_config.hpp  rdma_stream_server.hpp  rdma_stream_service.hpp  rdma_task.hpp  stream_service.hpp
doca-cpp/include/doca-cpp/rdma/internal/: rdma_awaitable.hpp  rdma_buffer_pool.hpp  rdma_communication.hpp  rdma_connection.hpp  rdma_engine.hpp  rdma_executor.hpp  rdma_operation.hpp  rdma_pipeline.hpp  rdma_request.hpp  rdma_session.hpp  rdma_session_manager.hpp  rdma_task.hpp
doca-cpp/include/doca-cpp/rdma/streaming/: rdma_buffer_pool.hpp  rdma_client.hpp  rdma_pipeline.hpp  rdma_server.hpp  stream_chain.hpp
doca-cpp/include/doca-cpp/transport/: session_manager.hpp
doca-cpp/samples/: CMakeLists.txt  device_discovery.cpp  rdma-server-api.yaml  rdma_samples.hpp  rdma_sender.cpp  server.cpp
doca-cpp/samples/device_discovery/: device_discovery.cpp
doca-cpp/samples/rdma_client_server/: CMakeLists.txt  client.cpp  common.hpp  config.yaml  server.cpp
doca-cpp/src/core/: buffer.cpp  context.cpp  device.cpp  mmap.cpp  progress_engine.cpp  resource_manager.cpp  resource_scope.cpp
doca-cpp/src/flow/: flow_config.cpp  flow_pipe.cpp  flow_port.cpp
doca-cpp/src/gpunetio/: gpu_buffer_array.cpp  gpu_buffer_pool.cpp  gpu_buffer_view.cpp  gpu_device.cpp  gpu_manager.cpp  gpu_memory_region.cpp  gpu_rdma_client.cpp  gpu_rdma_handler.cpp  gpu_rdma_pipeline.cpp  gpu_rdma_server.cpp  persistent_client_kernel.cu  persistent_server_kernel.cu
doca-cpp/src/gpunetio/kernels/: client_kernel.cu  server_kernel.cu
doca-cpp/src/rdma/: rdma_buffer.cpp  rdma_buffer_view.cpp  rdma_client.cpp  rdma_connection.cpp  rdma_endpoint.cpp  rdma_engine.cpp  rdma_executor.cpp  rdma_server.cpp  rdma_stream_chain.cpp  rdma_stream_client.cpp  rdma_stream_config.cpp  rdma_stream_server.cpp  rdma_task.cpp
doca-cpp/src/rdma/internal/: rdma_awaitable.cpp  rdma_buffer_pool.cpp  rdma_communication.cpp  rdma_connection.cpp  rdma_engine.cpp  rdma_executor.cpp  rdma_pipeline.cpp  rdma_session.cpp  rdma_session_manager.cpp  rdma_task.cpp
doca-cpp/src/rdma/streaming/: rdma_buffer_pool.cpp  rdma_client.cpp  rdma_pipeline.cpp  rdma_server.cpp  stream_chain.cpp
doca-cpp/src/transport/: session_manager.cpp
research/: flow.txt  flow_lpm.txt  rdma-api.yaml  rdma_api.cpp  rdma_sender.txt  rdma_task.hpp  rdma_write_requester.txt  rdma_write_responder.txt  zester_client.txt
samples/: CMakeLists.txt
samples/cpu_cpu_throughput/: CMakeLists.txt  client.cpp  common.hpp  cpu_cpu_throughput_configs.yaml  run_client.sh  server.cpp
samples/cpu_gpu_throughput/: CMakeLists.txt  client.cpp  common.hpp  cpu_gpu_throughput_configs.yaml  server.cpp
samples/device_discovery/: CMakeLists.txt  device_discovery.cpp
samples/fblms_streaming/: CMakeLists.txt  client.cpp  common.hpp  fblms_service.hpp  fblms_streaming_configs.yaml  fft_service.hpp  sensor_service.hpp  server.cpp
samples/gpu_gpu_throughput/: CMakeLists.txt  client.cpp  common.hpp  gpu_gpu_throughput_configs.yaml  run_client.sh  run_server.sh  server.cpp
samples/rdma_client_server/: CMakeLists.txt  client.cpp  common.hpp  rdma_client_server_configs.yaml  server.cpp  service.cpp  service.hpp
samples/rdma_streaming/: CMakeLists.txt  client.cpp  server.cpp
samples/rdma_streaming_chain/: CMakeLists.txt  client.cpp  common.hpp  server.cpp
vcpkg/portfiles/: portfile.cmake  usage  vcpkg.json
